--- a/src/Html/index.html
+++ b/src/Html/index.html
@@ -125,10 +125,7 @@
           <div class="item-description">
             <h3 class="heading-tertiary">Fruits & Vegetables</h3>
             <p class="content margin-bottom-md">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Et
-              voluptate natus, placeat, alias mollitia laborum cupiditate, vel
-              sit voluptatem molestias voluptatum voluptatibus ad quis ipsa
-              laudantium esse quod assumenda nesciunt.
+              A Variety of Fresh Fruits and Vegetables
             </p>
             <a class="button" href="../Html/products.html"
               >Explore Fruits & Vegetables</a
@@ -139,12 +136,9 @@
           <div class="item-description">
             <h3 class="heading-tertiary">Bakery</h3>
             <p class="content margin-bottom-md">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Et
-              voluptate natus, placeat, alias mollitia laborum cupiditate, vel
-              sit voluptatem molestias voluptatum voluptatibus ad quis ipsa
-              laudantium esse quod assumenda nesciunt.
+              The best cupcakes, cookies, cakes, pies, cheesecakes, fresh bread, biscotti, muffins, bagels, fresh coffee, milk and more.
             </p>
-            <a class="button" href="../Html/products.html">Explore Bakery</a>
+            <a class="button" href="../Html/products.html">Explore Bakery-Cakes-Dairy</a>
           </div>
           <div>
             <img
@@ -165,24 +159,18 @@
           <div class="item-description">
             <h3 class="heading-tertiary">Beverages</h3>
             <p class="content margin-bottom-md">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Et
-              voluptate natus, placeat, alias mollitia laborum cupiditate, vel
-              sit voluptatem molestias voluptatum voluptatibus ad quis ipsa
-              laudantium esse quod assumenda nesciunt.
+              Our Beverage department will ensure your Fridge is always fully stocked. Shop for soda, juice, beer and more.
             </p>
             <a class="button" href="../Html/products.html">Explore Beverages</a>
           </div>
         </div>
         <div class="item-inverse">
           <div class="item-description">
-            <h3 class="heading-tertiary">Beauty</h3>
+            <h3 class="heading-tertiary">Beauty and Hygiene</h3>
             <p class="content margin-bottom-md">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Et
-              voluptate natus, placeat, alias mollitia laborum cupiditate, vel
-              sit voluptatem molestias voluptatum voluptatibus ad quis ipsa
-              laudantium esse quod assumenda nesciunt.
+              Buy Beauty and Personal Care products online in India at best prices.
             </p>
-            <a class="button" href="../Html/products.html">Explore Beauty</a>
+            <a class="button" href="../Html/products.html">Explore Beauty-Hygiene</a>
           </div>
           <div>
             <img
@@ -201,12 +189,9 @@
             />
           </div>
           <div class="item-description">
-            <h3 class="heading-tertiary">Baby</h3>
+            <h3 class="heading-tertiary">Baby Care</h3>
             <p class="content margin-bottom-md">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Et
-              voluptate natus, placeat, alias mollitia laborum cupiditate, vel
-              sit voluptatem molestias voluptatum voluptatibus ad quis ipsa
-              laudantium esse quod assumenda nesciunt.
+              Shop online for Baby Products, Diapers, Skin Care Products, etc.
             </p>
             <a class="button" href="../Html/products.html">Explore Baby</a>
           </div>
